--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,21 @@
   -ms-overflow-style: none; 
   scrollbar-width: none;  
 }
+
+
+.zoom-in {
+  animation: zoomIn 0.3s ease-out forwards;
+}
+
+@keyframes zoomIn {
+  0% { transform: scale(0.8); opacity: 0; }
+  100% { transform: scale(1); opacity: 1; }
+}
+.box-shadow-g {
+  box-shadow: 4px 12px 47px 0 rgba(0, 0, 0, 0.1);
+}
+/* @keyframes zoomOut {
+  0% { transform: scale(1); opacity: 1; }
+  100% { transform: scale(0.8); opacity: 0; }
+} */
+
