--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,11 @@
   100% { transform: scale(0.8); opacity: 0; }
 } */
 
+.box-shadow-a{
+  box-shadow: 2px 4px 12px #00000014;
+  ;
+}
+
+.box-shadow-ab{
+  box-shadow: 0 0 0 1px rgb(0 0 0/4%),0 6px 20px rgb(0 0 0/20%);
+}
