--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,11 @@
 .custom-list li::marker {
   color: #ef1b27; /* This is orange-300 */
 }
+
+.table :where(th, td) {
+  padding-left: 0.2rem;
+  padding-right: 0.2rem;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  vertical-align: middle;
+}
